FINISH ALL REMAINING STYLING OF SECTION 4 AND FIX THE ALIGNMENT ISSUE WITH SECTION-2
Styling of button in section-4 and fixed the issue with alignment of section-2 between the text and the image.

--- a/styles.css
+++ b/styles.css
@@ -73,8 +73,6 @@ p {
 button {
   background-color: #3882f6;
   color: white;
-  max-width: 90px;
-  padding: 6px 22px;
   border-radius: 6px;
 }
 
@@ -82,7 +80,9 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: 90px;
   border: 0;
+  padding: 6px 22px;
 }
 
 .second {
@@ -90,7 +90,7 @@ button {
   padding: 30px;
 }
 .block {
-  padding: 90px;
+  padding: 75px;
   border-style: solid;
   border-radius: 15px;
   border-color: #3882f6;
@@ -99,7 +99,7 @@ button {
 .flex2 {
   display: flex;
   justify-content: center;
-  gap: 70px;
+  gap: 120px;
   margin-left: 400px;
   margin-right: 400px;
 }
@@ -109,6 +109,9 @@ button {
   flex-direction: column;
   gap: 10px;
   text-align: center;
+  max-width: 150px;
+  flex-grow: 1;
+  align-items: center;
 }
 
 .sec3 {
@@ -131,15 +134,38 @@ button {
   font-weight: 20px;
 }
 
+.sec4{
+    display: flex;
+    justify-content: center;
+ }
+
 .under{
     background-color: #3882f6;
-    margin: 120px 230px;
+    margin-top: 120px; 
+    margin-bottom:120px ;
     display: flex;
     justify-content: space-around;
-    padding: 20px 65px;
+    padding: 40px 0;
+    flex-basis: 60%;
+    border-radius: 10px;
+    align-items: center;
+    
 }
 
 .sub{
     display: flex;
     flex-direction: column;
+    color: white;
 }
+
+.a{
+    font-size: 25px;
+}
+
+.b2{
+    border-style: solid;
+    border-color: white;
+    padding:8px 30px;
+    font-weight: bold;
+   }
+
